--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,67 @@
 
 :root{
-  --background: #000430;
-  --secoundaryBackground: #171c48;
+  --background: #000430
+  --secoundaryBackground: #171c48
   --text: #fff;
   --purple: #828dff;
   --teal: #24feee;
+}
+body{
+  background-color: var(--background);
+  color: var(--text);
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 120px;
+  margin:120px auto 0 auto;
+  max-width: 500px;
+}
+.stats-container{
+  padding: 10px;
+  borader-radius:10px;
+  border: 2px solid var(--purple);
+  display: flex;
+  justify-content: space-between;
+  gap:20px;}
+
+.details{width: 100%;
+}
+
+  #progressBar{
+    width:100%;
+    height: 10px;
+    background-color: var(secondaryBackground);
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+  #progress{
+    width: 80%;
+    height: 10px;
+    background-color: var(--teal);
+    border-radius: 10px;
+    transition: all 0.3s ease;
+  }
+
+#numbers{
+  width: 100px;
+  height: 100px;
+  background-color: var(--purple);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ border-radius: 50%;
+ font: size 20px;
+ font-weight: bold;
+}
+form{
+  margin-top: 60px;
+}
+input{
+  padding:10px;
+  background: var(--secondaryBackground);
+  border: 1px solid var(--purple);
+  
 }
